--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <div class="header">
   <div class="logo">
-    <img src="Images/logo.png" alt="logo">
+    <img src="Images/logo.png" class="desktop">
+    <img src="Images/small_logo.png" class="mobile">
   </div>
 
 
