--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
       <a href="index.html">Home</a>
     </li>
     <li>
+      <a href="security.html">Security</a>
+    </li>
+    <li>
+      <a href="cloud.html">Cloud</a>
+    </li>
+    <li>
+      <a href="Analytics.html">Analytics</a>
+    </li>
+    <li>
+      <a href="storage.html">Storage Solutions</a>
+    </li>
+    <li>
+      <a href="#">Page 6</a>
+    </li>
+    <li>
       <a href="contact.html">Contact Us</a>
     </li>
   </div>
