--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 </div>
 
 <div class="maincontent">
+  <div class="banner">
+    <img src="Images/home_banner.png">
+  </div>
 	<div class="contenttitle">
 		Home Page
 	</div>
