--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
   <a href="#">Page 6</a>
   <a href="contact.html">Contact us</a>
 </div>
-
+<div class="topnav_mobile">
+  <a href="index.html">Home</a>
+  <a href="security.html">Security</a>
+  <a href="cloud.html">Cloud</a>
+  <a href="Analytics.html">Analytics</a>
+  <a href="storage.html">Storage Solution</a>
+  <a href="#">Page 6</a>
+  <a href="contact.html">Contact us</a>
+</div>
 <div class="cards">
 	<div class="card" style="width: 18rem;">
   <img class="cardimg" src="Images/security.jpg">
